--- a/src/components/NotFound/index.css
+++ b/src/components/NotFound/index.css
@@ -1,27 +1,24 @@
-.not-found-route-container {
+/* Write your CSS here */
+.bg-cont-not-found {
+  background-image: url('https://assets.ccbp.in/frontend/react-js/ipl-dashboard-sm-bg.png');
+  min-height: 100vh;
+  background-size: cover;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url('https://assets.ccbp.in/frontend/react-js/ipl-dashboard-sm-bg.png');
-  background-size: cover;
-  min-height: 100vh;
+  padding: 30px;
 }
 
-@media screen and (min-width: 768px) {
-  .not-found-route-container {
+@media (min-width: 768px) {
+  .bg-cont-not-found {
     background-image: url('https://assets.ccbp.in/frontend/react-js/ipl-dashboard-lg-bg.png');
-  }
-}
-
-.not-found-heading {
-  color: #ffffff;
-  font-family: 'Bree Serif';
-  font-size: 32px;
-}
-
-@media screen and (min-width: 768px) {
-  .not-found-heading {
-    font-size: 64px;
+    min-height: 100vh;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 30px;
   }
 }
