--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -1,72 +1,80 @@
-.home-route-container {
+/* Write your CSS here */
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'Bree Serif';
+}
+
+.bg-cont {
+  background-image: url('https://assets.ccbp.in/frontend/react-js/ipl-dashboard-sm-bg.png');
+  min-height: 100vh;
+  background-size: cover;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url('https://assets.ccbp.in/frontend/react-js/ipl-dashboard-sm-bg.png');
-  background-size: cover;
-  min-height: 100vh;
+  padding: 30px;
 }
 
-@media screen and (min-width: 768px) {
-  .home-route-container {
-    background-image: url('https://assets.ccbp.in/frontend/react-js/ipl-dashboard-lg-bg.png');
-  }
-}
-
-.teams-list-container {
-  width: 90%;
-  max-width: 600px;
-}
-
-@media screen and (min-width: 768px) {
-  .teams-list-container {
-    width: 90%;
-    max-width: 1110px;
-  }
-}
-
-.ipl-dashboard-heading-container {
+.logo-cont {
   display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
+  margin-bottom: 40px;
 }
 
-.ipl-logo {
-  width: 25px;
-  height: 40px;
+.logo-img {
+  height: 50px;
+  margin-right: 20px;
 }
 
-@media screen and (min-width: 768px) {
-  .ipl-logo {
-    width: 60px;
-    height: 96px;
-  }
+.ipl-text {
+  color: white;
+  font-size: 35px;
 }
 
-.ipl-dashboard-heading {
-  color: #ffffff;
-  font-family: 'Bree Serif';
-  font-size: 36px;
-  margin-left: 12px;
-}
-
-@media screen and (min-width: 768px) {
-  .ipl-dashboard-heading {
-    font-size: 72px;
-    margin-left: 16px;
-  }
-}
-
-.loader-container {
+.list-cont {
+  list-style-type: none;
+  width: 100%;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  min-height: 80vh;
-}
-
-.teams-list {
-  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   flex-wrap: wrap;
-  padding-left: 0px;
+}
+
+ul {
+  list-style-type: none;
+}
+
+@media (min-width: 768px) {
+  .bg-cont {
+    background-image: url('https://assets.ccbp.in/frontend/react-js/ipl-dashboard-lg-bg.png');
+    min-height: 100vh;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 30px;
+  }
+
+  .logo-img {
+    height: 80px;
+    margin-right: 20px;
+  }
+
+  .ipl-text {
+    color: white;
+    font-size: 45px;
+  }
+
+  .list-cont {
+    list-style-type: none;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
 }
