--- a/src/components/TeamCard/index.css
+++ b/src/components/TeamCard/index.css
@@ -1,67 +1,60 @@
-.team-item {
-  list-style-type: none;
-  width: 50%;
-}
+/* Write your CSS here */
 
-.link {
-  display: flex;
-  align-items: center;
+.each-list {
+  border: 2px solid #ffffff;
+  padding: 20px;
+  width: 40%;
+  border-radius: 10px;
   background-color: #ffffff33;
-  height: 85%;
-  border-radius: 12px;
-  border: 1px solid #ffffff;
-  padding-left: 7px;
-  padding-top: 12px;
-  padding-bottom: 12px;
-  padding-right: 7px;
-  margin-left: 8px;
-  margin-right: 8px;
-  margin-bottom: 24px;
+  display: flex;
+  flex-direction: row;
+  margin: 5%;
   text-decoration: none;
 }
-
-@media screen and (min-width: 768px) {
-  .link {
-    padding-left: 24px;
-    padding-top: 12px;
-    padding-bottom: 12px;
-    padding-right: 24px;
-    margin-left: 15px;
-    margin-right: 15px;
-    margin-bottom: 30px;
-  }
+.list-item {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 .team-logo {
-  width: 45px;
-  height: 45px;
-}
-
-@media screen and (min-width: 768px) {
-  .team-logo {
-    width: 80px;
-    height: 80px;
-  }
-}
-
-@media screen and (min-width: 992px) {
-  .team-logo {
-    width: 150px;
-    height: 150px;
-  }
+  height: 35px;
+  width: 35px;
+  margin-right: 10px;
 }
 
 .team-name {
-  text-align: center;
-  color: #ffffff;
-  font-family: 'Bree Serif';
   font-size: 12px;
-  margin-left: 4px;
+  color: white;
+  text-align: center;
+  text-decoration: none;
 }
 
-@media screen and (min-width: 768px) {
+@media (min-width: 768px) {
+  .each-list {
+    border: 2px solid #ffffff;
+    padding: 20px;
+    width: 48%;
+    border-radius: 10px;
+    background-color: #ffffff33;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 1%;
+    text-decoration: none;
+  }
+
+  .team-logo {
+    height: 105px;
+    width: 105px;
+    margin-right: 50px;
+  }
+
   .team-name {
-    font-size: 32px;
-    margin-left: 16px;
+    font-size: 25px;
+    color: white;
+    text-align: center;
+    text-decoration: none;
   }
 }
